@@ -1,6 +1,15 @@
 FlightPath 5.x Changelog
 ========================
 
+2016-09-23
+  Improved error handling for Execute PHP function.
+
+
+2016-09-22
+  Added extra documentation for the structure of term ID's setting, and an additional setting to the course search code to support the [Y+1]
+  year adjust code.
+  
+
 2016-09-10
   Made various changes so that pie charts are rendered using a hook-able theme function, similar to Course Row, Footnot, etc.
   This allows outside modules to modify the pie charts.
